--- a/path/app/config/parameters.yml
+++ b/path/app/config/parameters.yml
@@ -11,5 +11,5 @@ parameters:
     mailer_user:       ~
     mailer_password:   ~
 
-    locale:            en
+    locale:            ru
     secret:            !K4is+65F8@Te*g
