--- a/path/app/config/routing.yml
+++ b/path/app/config/routing.yml
@@ -2,6 +2,10 @@ insurance_content:
     resource: "@InsuranceContentBundle/Resources/config/routing.yml"
     prefix:   /
 
+city_content:
+    resource: "@InsuranceContentBundle/Resources/config/routing/city.yml"
+    prefix:   /city
+
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
 
