Added fields to order entity. Added block to dashboard to generate policy numbers. Try to get work form of generation.

--- a/path/app/config/config.yml
+++ b/path/app/config/config.yml
@@ -73,9 +73,9 @@ fos_user:
 sonata_block:
     default_contexts: [cms]
     blocks:
+        insurance.block.service.policy:
         sonata.admin.block.admin_list:
             contexts:   [admin]
-
         #sonata.admin_doctrine_orm.block.audit:
         #    contexts:   [admin]
 
@@ -104,15 +104,11 @@ sonata_admin:
         blocks:
             # display a dashboard block
             - { position: left, type: sonata.admin.block.admin_list }
-sonata_block:
-    default_contexts: [cms]
-    blocks:
-        sonata.admin.block.admin_list:
-            contexts:   [admin]
-
-        sonata.block.service.text:
-        sonata.block.service.rss:
-
+            - {position: right, type: insurance.block.service.policy }
+        #groups:
+        #    Регионы:
+        #        items:
+        #            - insurance.content.admin.city
 
 sonata_doctrine_orm_admin:
     # default value is null, so doctrine uses the value defined in the configuration
