--- a/path/src/Insurance/ContentBundle/Resources/config/routing.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/routing.yml
@@ -1,3 +1,6 @@
 insurance_content_homepage:
     pattern: /
     defaults: { _controller: InsuranceContentBundle:Default:index }
+generate_polices:
+    pattern: /admin/generate_polices
+    defaults: { _controller: InsuranceContentBundle:Helper:generatePolicy }
