HTML template for pdf generation created

--- a/path/src/Insurance/ContentBundle/Resources/config/routing.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/routing.yml
@@ -4,3 +4,6 @@ insurance_content_homepage:
 generate_polices:
     pattern: /admin/generate_polices
     defaults: { _controller: InsuranceContentBundle:Helper:generatePolicy }
+mail_send:
+    pattern: /notify
+    defaults: { _controller: InsuranceContentBundle:Default:send }
