Routes for html blanks in pdf generation added

--- a/path/src/Insurance/ContentBundle/Resources/config/routing.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/routing.yml
@@ -7,3 +7,9 @@ generate_polices:
 mail_send:
     pattern: /notify
     defaults: { _controller: InsuranceContentBundle:Default:send }
+generate_policy:
+    pattern: /generate-pdf-policy/{orderId}
+    defaults: { _controller: InsuranceContentBundle:PDF:notifyUserPolicy }
+generate_admin_notification:
+    pattern: /generate-admin-notification/{feedback_id}
+    defaults: { _controller: InsuranceContentBundle:PDF:notifyFeedback }
