--- a/path/app/config/config_dev.yml
+++ b/path/app/config/config_dev.yml
@@ -27,3 +27,10 @@ assetic:
 
 #swiftmailer:
 #    delivery_address: me@example.com
+services:
+    twig.extension.debug:
+        class:        Twig_Extension_Debug
+        tags:
+             - { name: 'twig.extension' }
+twig:
+  debug: true
