--- a/path/composer.json
+++ b/path/composer.json
@@ -18,10 +18,11 @@
         "sensio/generator-bundle": "2.2.*",
         "jms/security-extra-bundle": "1.4.*",
         "jms/di-extra-bundle": "1.3.*",
-	"sonata-project/admin-bundle": "dev-master",
-	"sonata-project/user-bundle": "dev-master",
-	"friendsofsymfony/user-bundle": "*",
-	"sonata-project/doctrine-orm-admin-bundle": "dev-master"
+        "sonata-project/admin-bundle": "dev-master",
+        "sonata-project/user-bundle": "dev-master",
+        "friendsofsymfony/user-bundle": "*",
+        "sonata-project/doctrine-orm-admin-bundle": "dev-master",
+        "tecnick.com/tcpdf" : "*"
     },
     "scripts": {
         "post-install-cmd": [
