--- a/path/app/config/routing.yml
+++ b/path/app/config/routing.yml
@@ -6,6 +6,10 @@ city_content:
     resource: "@InsuranceContentBundle/Resources/config/routing/city.yml"
     prefix:   /city
 
+feedback:
+    resource: "@InsuranceContentBundle/Resources/config/routing/feedback.yml"
+    prefix:   /
+
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
 
