--- a/path/src/Insurance/ContentBundle/Resources/config/routing/feedback.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/routing/feedback.yml
@@ -1,30 +1,30 @@
-feedback:
-    pattern:  /
-    defaults: { _controller: "InsuranceContentBundle:Feedback:index" }
+#feedback:
+#    pattern:  /
+#    defaults: { _controller: "InsuranceContentBundle:Feedback:index" }
 
-feedback_show:
-    pattern:  /{id}/show
-    defaults: { _controller: "InsuranceContentBundle:Feedback:show" }
+#feedback_show:
+#    pattern:  /{id}/show
+#    defaults: { _controller: "InsuranceContentBundle:Feedback:show" }
 
-feedback_new:
-    pattern:  /new
-    defaults: { _controller: "InsuranceContentBundle:Feedback:new" }
+#feedback_new:
+#    pattern:  /new
+#    defaults: { _controller: "InsuranceContentBundle:Feedback:new" }
 
 feedback_create:
     pattern:  /create
     defaults: { _controller: "InsuranceContentBundle:Feedback:create" }
     requirements: { _method: post }
 
-feedback_edit:
-    pattern:  /{id}/edit
-    defaults: { _controller: "InsuranceContentBundle:Feedback:edit" }
+#feedback_edit:
+#    pattern:  /{id}/edit
+#    defaults: { _controller: "InsuranceContentBundle:Feedback:edit" }
 
-feedback_update:
-    pattern:  /{id}/update
-    defaults: { _controller: "InsuranceContentBundle:Feedback:update" }
-    requirements: { _method: post|put }
+#feedback_update:
+#    pattern:  /{id}/update
+#    defaults: { _controller: "InsuranceContentBundle:Feedback:update" }
+#    requirements: { _method: post|put }
 
-feedback_delete:
-    pattern:  /{id}/delete
-    defaults: { _controller: "InsuranceContentBundle:Feedback:delete" }
-    requirements: { _method: post|delete }
+#feedback_delete:
+#    pattern:  /{id}/delete
+#    defaults: { _controller: "InsuranceContentBundle:Feedback:delete" }
+#    requirements: { _method: post|delete }
