Events for orders added - send email to user before and after pay

--- a/path/src/Insurance/ContentBundle/Resources/config/services.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/services.yml
@@ -7,6 +7,7 @@ services:
         arguments: [ '@service_container' ]
         tags:
             - { name: doctrine.event_listener, event: postPersist }
+            - { name: doctrine.event_listener, event: preUpdate }
     insurance.content.admin.rate:
         class: Insurance\ContentBundle\Admin\RateAdmin
         arguments: [null, Insurance\ContentBundle\Entity\Rate, SonataAdminBundle:CRUD]
