--- a/path/src/Insurance/ContentBundle/Resources/config/routing.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/routing.yml
@@ -17,13 +17,13 @@ generate_pdf_policy:
     pattern: generate-pdf-policy/{orderId}
     defaults: { _controller: InsuranceContentBundle:PDF:generatePDFPolicy }
 get_cities:
-    pattern: /get-city
+    pattern: /get-city.htm
     defaults: { _controller: InsuranceContentBundle:Default:getCities }
 get_car_models:
-    pattern: /get-car-model
+    pattern: /get-car-model.htm
     defaults: { _controller: InsuranceContentBundle:Default:getCarModels }
 calculate_go:
-    pattern: /calculate
+    pattern: /calculate.htm
     defaults: { _controller: InsuranceContentBundle:Default:goToStepOne, method: POST }
 feedback_create:
     pattern:  /create
@@ -32,3 +32,6 @@ feedback_create:
 step1:
     pattern: /step1.htm
     defaults: { _controller: InsuranceContentBundle:Default:stepOne }
+calculate_process:
+    pattern: /save-calculator.htm
+    defaults: { _controller: "InsuranceContentBundle:Default:processCalculator", method: POST }
