--- a/path/src/Insurance/ContentBundle/Resources/config/config.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/config.yml
@@ -15,3 +15,8 @@ parameters:
         max: 6.0
         step: 0.1
     insure.period: [0.5, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
+    dgo.sum: [ 25000, 50000, 100000, 150000, 200000, 250000]
+    ns.sum: [ 3000, 4000, 5000, 6000, 7000, 8000, 9000, 10000, 11000, 12000, 15000, 17000, 20000, 22000, 23000, 25000, 30000, 35000, 40000, 45000, 50000]
+    passengers:
+        min: 0
+        max: 4
