Right formulas added to addtional insurance and casualty

--- a/path/src/Insurance/ContentBundle/Resources/config/config.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/config.yml
@@ -20,4 +20,5 @@ parameters:
     passengers:
         min: 0
         max: 4
-    base.rate: 180
+    base.rate: 180 #Base rate for insurance calculation
+    dgo.rate: 1.2 #Age rate
