--- a/path/app/config/config.yml
+++ b/path/app/config/config.yml
@@ -73,6 +73,10 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: Application\Sonata\UserBundle\Entity\User
+    registration:
+        form:
+            type:
+                sonata_user_registration
 sonata_block:
     default_contexts: [cms]
     blocks:
