All steps added. Fixed bugs on calculator and personal data pages

--- a/path/src/Insurance/ContentBundle/Resources/config/routing.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/routing.yml
@@ -62,3 +62,9 @@ step3:
 save_calculation:
     pattern: /save-calculation.htm
     defaults: {_controller: "InsuranceContentBundle:Default:saveCalculation"}
+clear_calculation:
+    pattern: /clear-calculation.htm
+    defaults: {_controller: "InsuranceContentBundle:Default:clearStoredData"}
+finish:
+    pattern: /finish.htm
+    defaults: {_controller: "InsuranceContentBundle:Default:finish"}
