--- a/path/src/Insurance/ContentBundle/Resources/config/config.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/config.yml
@@ -1,5 +1,5 @@
 parameters:
-    admin.emails: 'polisvit@gmail.com'
+    admin.emails: ['polisvit@gmail.com']
     email.send.from: 'noreply@polismarket.com.ua'
     site.name: 'Страховое агенство "ПОЛИСМАРКЕТ"'
     site.domain: 'polismarket.com.ua'
