--- a/path/src/Insurance/ContentBundle/Resources/config/config.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/config.yml
@@ -3,7 +3,7 @@ parameters:
     email.send.from: 'noreply@polismarket.com.ua'
     site.name: 'Страховое агенство "ПОЛИСМАРКЕТ"'
     site.domain: 'polismarket.com.ua'
-    contact.email: ['support@polismarket.com.ua', 'mirgoody@yandex.ua']
+    contact.email: ['support@polismarket.com.ua', 'polisvit@gmail.com']
     contact.phone: '(050) 001-01-01'
     savings: #show user fake money savings
         date.start: '30.07.2013' #initial date to start count
