--- a/path/composer.json
+++ b/path/composer.json
@@ -21,7 +21,7 @@
         "sonata-project/admin-bundle": "dev-master",
         "sonata-project/user-bundle": "dev-master",
         "friendsofsymfony/user-bundle": "*",
-        "sonata-project/doctrine-orm-admin-bundle": "dev-master"
+        "sonata-project/doctrine-orm-admin-bundle": "dev-master",
         "tecnick.com/tcpdf" : "*"
     },
     "scripts": {
