--- a/path/.gitignore
+++ b/path/.gitignore
@@ -10,5 +10,5 @@
 /app/config/parameters.yml
 *~
 /web/pdf/
-/src/Insurance/ContentBundle/Resources/public/fonts/
-/src/Insurance/ContentBundle/Resources/public/images/
+/src/Insurance/ContentBundle/Resources/public/fonts/*
+/src/Insurance/ContentBundle/Resources/public/images/*
