--- a/path/src/Insurance/ContentBundle/Resources/config/config.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/config.yml
@@ -1,3 +1,5 @@
+imports:
+    - { resource: parameters.yml }
 parameters:
     admin.emails: 'polisvit@gmail.com'
     email.send.from: 'noreply@polismarket.com.ua'
@@ -5,7 +7,7 @@ parameters:
     site.name: 'Страховое агенство "ПОЛИСМАРКЕТ"'
     site.domain: 'polismarket.com.ua'
     contact.email: 'support@polismarket.com.ua'
-    contact.phone: '(050) 001-01-01'
+    contact.phone: '(066)931-06-06'
     savings: #show user fake money savings
         date.start: '30.07.2013' #initial date to start count
         initial.sum: 12345 #initial money amount
