--- a/path/src/Insurance/ContentBundle/Resources/config/routing.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/routing.yml
@@ -83,3 +83,6 @@ osago-info:
 event-info:
     pattern: /goodtoknow/event
     defaults: { _controller: "InsuranceContentBundle:Default:about" }
+faq:
+    pattern: /faq
+    defaults: { _controller: "InsuranceContentBundle:Default:faq" }
