add partner page

--- a/path/src/Insurance/ContentBundle/Resources/config/routing.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/routing.yml
@@ -86,3 +86,6 @@ event-info:
 faq:
     pattern: /faq
     defaults: { _controller: "InsuranceContentBundle:Default:faq" }
+partner:
+    pattern: /partner
+    defaults: { _controller: "InsuranceContentBundle:Default:partner" }
