--- a/path/app/config/config.yml
+++ b/path/app/config/config.yml
@@ -68,8 +68,8 @@ swiftmailer:
     username:  %mailer_user%
     password:  %mailer_password%
     spool:     { type: memory }
-    port:      465
-    encryption: ssl
+    #port:      465
+    #encryption: ssl
 
 #FOS User Bundle configuration
 fos_user:
