Payment page for Liqpay added

--- a/path/src/Insurance/ContentBundle/Resources/config/routing.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/routing.yml
@@ -88,7 +88,7 @@ faq:
     defaults: { _controller: "InsuranceContentBundle:Default:faq" }
 partner:
     pattern: /partner
-    defaults: { _controller: "InsuranceContentBundle:Default:partner" }    defaults: { _controller: "InsuranceContentBundle:Default:faq" }
+    defaults: { _controller: "InsuranceContentBundle:Default:partner" }
 liqpay:
     pattern: /liqresp
     defaults: { _controller: "InsuranceContentBundle:Default:liqpayResponse" }
