--- a/path/composer.json
+++ b/path/composer.json
@@ -18,10 +18,10 @@
         "sensio/generator-bundle": "2.2.*",
         "jms/security-extra-bundle": "1.4.*",
         "jms/di-extra-bundle": "1.3.*",
-        "sonata-project/admin-bundle": "dev-master",
-        "sonata-project/user-bundle": "dev-master",
+        "sonata-project/admin-bundle": "2.2.*",
+        "sonata-project/user-bundle": "2.2.*",
         "friendsofsymfony/user-bundle": "*",
-        "sonata-project/doctrine-orm-admin-bundle": "dev-master",
+        "sonata-project/doctrine-orm-admin-bundle": "2.2.*",
         "tecnick.com/tcpdf" : "*"
     },
     "scripts": {
@@ -41,7 +41,7 @@
     "config": {
         "bin-dir": "bin"
     },
-    "minimum-stability": "alpha",
+    "minimum-stability": "stable",
     "extra": {
         "symfony-app-dir": "app",
         "symfony-web-dir": "web",
