--- a/path/src/Insurance/ContentBundle/Resources/config/routing.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/routing.yml
@@ -98,3 +98,6 @@ privat24:
 pay_redirect:
     pattern: /pay
     defaults: { _controller: "InsuranceContentBundle:Default:payRedirect" }
+payment_success:
+    pattern: /payment_success
+    defaults: { _controller: "InsuranceContentBundle:Default:paymentSuccess" }
